# Study

./: Readme.md
Angular/Ecommerse_Angular/src/: index.html
AspNET/: README.md
AspNET/firstcoreApp/Controllers/: HomeController.cs
AspNET/firstcoreApp/Properties/: launchSettings.json
C#/basics/firstConsole/: Program.cs
Cpp/: README.md  run.sh
Cpp/laboratorio_1/src/: fecha.cpp  grupo.cpp  persona.cpp
Cpp/laboratorio_2/src/: carritoProductos.cpp  clientesSucursalesLDE.cpp  producto.cpp
Cpp/laboratorio_3/src/: historial.cpp  listaPromociones.cpp
Cpp/laboratorio_4/src/: queja.cpp  tablaQuejas.cpp
Cpp/laboratorio_4/test/: colaEnvios1-crear-consultar-liberar.in  colaEnvios2-encolar-desencolar-cantidad.in  colaEnvios2-encolar-desencolar-cantidad.out  colaEnvios3-encolar-desencolar-cantidad-muchas-veces.out  colaEnvios4-invertir-max-mas-prioritaria.in  colaEnvios4-invertir-max-mas-prioritaria.out  (+2 more)
Cpp/p4_fing/practico_1/: main.cpp
Cpp/practico_3/: a.cpp
Flutter/learning_dart/: pubspec.yaml
Java/basic/: Gui.java  Jframe.java  README.md  audioplayer.java  fileClass.java  text.txt  timerTask.java
Kotlin/learningJPA/: pom.xml
Kotlin/learning_lenguage/: basicsyntax.kt
Node_API/: README.md
Node_API/Chat_Sokect.io/: package.json
Node_API/JWT-authentication/: app.js  generateKeypair.js
Node_API/Loginapi_MySQL/: passport.config.js
Node_API/Simple_api/: package.json
Node_API/User_Authentication/: package-lock.json  package.json
Pascal/: README.md  run.sh
Pascal/laboratorio_2/: principal  principal.pas  tarea2.pas  test.py
Pascal/practico_12/: test.pas
Pascal/practico_9/: act_8.pas
Python/: README.md
Rust/: README.md
Rust/100-exercises-to-learn-rust/: README.md
Rust/rust_API/: README.md  makefile
Rust/rust_API/firstAPI/: Cargo.toml  README.md
Rust/rust_API/firstAPI/src/: main.rs
Rust/rust_API/firstAPI/src/api/: task.rs
Rust/rust_API/firstAPI/src/model/: user.rs
Rust/rust_API/firstAPI/src/repo/: ddb.rs
Rust/rust_API/post_app_with_diesel/: Cargo.toml  README.md  Rocket.toml  docker-compose.yml  makefile
Rust/rust_API/post_app_with_diesel/migrations/2023-01-16-154304_posts/: up.sql
Rust/rust_API/post_app_with_diesel/src/: db.rs  main.rs  models.rs  schema.rs
Rust/urlShortener/: .gitignore  Cargo.toml  build.rs  main.rs  mappings.txt
Rust/urlShortener/src/: home.html  index.ts  lib.rs  rewrite.rs
docker/: README.md
dotNet/: README.md
javascript/Angular/: README.md
javascript/Nest/: README.md
javascript/Node_API/: README.md
javascript/React/: README.md
(+422 files in other folders)
