[package]
name = "first_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
aws-config = "0.52.0"
aws-sdk-dynamodb = "0.22.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = "1.0.152"
strum = "0.24.1"
strum_macros = "0.24.3"
uuid = "1.2.2"
