[package]
name = "post_app_with_diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.0", features = ["derive"]}
diesel = { version = "2.0.2", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
package = "0.0.0"

actix-web = "4.2.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
